# homework7

./: .gitignore  CMakeLists.txt  README.md  bulk.cpp  bulk.h
.github/workflows/: release.yml
